--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "numberartificial <c05118006@vip.qq.com>",
   "license": "ISC",
   "devDependencies": {
+    "ethereumjs-abi": "0.6.8",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.0",
-    "hardhat": "^2.9.1"
+    "hardhat": "^2.9.1",
+    "ts-node": "^8.5.4",
+    "typechain": "^4.0.0",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0"
-  }
+  },
+  "repository": "git@github.com:Numberartificial/solidityLearn.git"
 }
