--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
   "author": "numberartificial <c05118006@vip.qq.com>",
   "license": "ISC",
   "devDependencies": {
-    "ethereumjs-abi": "0.6.8",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@types/chai": "^4.2.6",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "17.0.34",
     "chai": "^4.3.6",
+    "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.0",
+    "ethereumjs-abi": "0.6.8",
     "ethers": "^5.6.0",
     "hardhat": "^2.9.1",
-    "ts-node": "^8.5.4",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.4.0",
     "typechain": "^4.0.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0"
